add vernacular series search fields SW-30
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3598 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -79,11 +79,17 @@ era_facet = custom, removeTrailingPunct(650y:651y, [\\\\,;], ([A-Za-z0-9]{2}) )
 
 # Series Search Fields
 series_title_search = 440anpv:830[a-x]
+vern_series_title_search = custom, getLinkedField(440anpv:830[a-x])
 series_person_search = 440anpv:800[a-x]
+vern_series_person_search = custom, getLinkedField(440anpv:800[a-x])
 series_org_search = 440anpv:810[a-x]
+vern_series_org_search = custom, getLinkedField(440anpv:810[a-x])
 series_proc_search = 440anpv:811[a-x]
+vern_series_proc_search = custom, getLinkedField(440anpv:811[a-x])
 series_anything_search = 440anpv:800[a-x]:810[a-x]:811[a-x]:830[a-x]
+vern_series_anything_search = custom, getLinkedField(440anpv:800[a-x]:810[a-x]:811[a-x]:830[a-x])
 series_anything490_search = 440anpv:490a:800[a-x]:810[a-x]:811[a-x]:830[a-x]
+vern_series_anything490_search = custom, getLinkedField(440anpv:490a:800[a-x]:810[a-x]:811[a-x]:830[a-x])
 
 # Publication Fields
 pub_search = custom, getPublication 
