--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -20,9 +20,8 @@ vern_title_series_search = custom, getLinkedField(440anpv:490av:800fgklmnoprstv:
 # Title Display Fields
 title_245a_display = custom, removeTrailingPunct(245a, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 vern_title_245a_display = custom, vernRemoveTrailingPunc(245a, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
-# we don't currently use 245c display, and 1250 records are not indexed b/c they incorrectly have more than one 245c
-#title_245c_display = 245c
-#vern_title_245c_display = custom, getLinkedField(245c)
+title_245c_display = custom, removeTrailingPunct(245c, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
+vern_title_245c_display = custom, vernRemoveTrailingPunc(245c, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 # no sub c in title_display
 title_display = custom, removeTrailingPunct(245abdefghijklmnopqrstuvwxyz, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 vern_title_display = custom, vernRemoveTrailingPunc(245abdefghijklmnopqrstuvwxyz, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
