--- a/examples/stanfordBlacklight/translation_maps/callnumber_map.properties
+++ b/examples/stanfordBlacklight/translation_maps/callnumber_map.properties
@@ -55,7 +55,7 @@ DQ = DQ - Switzerland (History)
 DR = DR - Balkan Peninsula (History)
 DS = DS - Asia (History)
 DT = DT - Africa (History)
-DU = DU - Oceanía (History)
+DU = DU - Oceania (History)
 DX = DX - Gypsies (History)
 E = E - History of the Americas (General)
 F = F - History of the Americas (Local)
@@ -227,7 +227,7 @@ PQ = PQ - French, Italian, Spanish & Portuguese Literature
 PR = PR - English Literature
 PS = PS - American Literature
 PT = PT - Germanic & Scandinavian Literatures
-PZ = PZ - Children’s Literature
+PZ = PZ - Children's Literature
 Q = Q - Science
 QA = QA - Mathematics
 QB = QB - Astronomy
