fix typo marc.permissive property
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3629 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_config.properties
+++ b/examples/stanfordBlacklight/sw_config.properties
@@ -20,9 +20,9 @@ solr.indexer = edu.stanford.StanfordIndexer
 #  overrides marc4j RecordImpl.  Useful when changes are needed from marc4j 
 #  code
 marc.override = org.solrmarc.marcoverride.NoSortMarcFactoryImpl 
-# - marc_permissive - if true, try to recover from errors, including records
+# - marc.permissive - if true, try to recover from errors, including records
 #  with errors, when possible
-marc_permissive = true
+marc.permissive = true
 # - marc.verbose - when set to true, output much more information as each marc 
 #   record is ingested
 marc.verbose = false
