--- a/examples/stanfordBlacklight/translation_maps/library_map.properties
+++ b/examples/stanfordBlacklight/translation_maps/library_map.properties
@@ -21,7 +21,7 @@ HV-ARCHIVE = Hoover Archives
 LANE-MED = Lane (Medical)
 LAW = Crown (Law)
 JACKSON = Jackson (Business)
-MATH-CS = Math & Computer Science
+MATH-CS = Mathematics & Statistics
 MEYER = Meyer
 MUSIC = Music
 PHYSICS = Physics
