check in build.properties with hudsonqa value for cobertura.jar.dir  -- solrmarc vendor drop R1164 2010-05-14:  improved build and other goodies
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3685 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/build.properties
+++ b/examples/stanfordBlacklight/build.properties
@@ -34,11 +34,13 @@ test.class = edu.stanford.AllTests
 
 # - cobertura.jar.dir - directory containing cobertura jar file(s)
 #  hudson
-#cobertura.jar.dir = /home/hudson/tools/cobertura
+cobertura.jar.dir = /home/hudson/tools/cobertura
 #  laptop
-cobertura.jar.dir = /Applications/cobertura-1.9.3
+#cobertura.jar.dir = /Applications/cobertura-1.9.3
+
 # - cobertura.instr.dir - directory containing classes instrumented for coverage data
 cobertura.instr.dir = instr
+
 # - cobertura.coverage.dir - directory for coverage reports
 cobertura.coverage.dir = ${build.dir}/coverage/cobertura
 
