fix for truncated records (too many 999 fields (items) to fit in single bib record ...) -- use combining reader so all the 999s are attached to a single bib record.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3689 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.xml
+++ b/build.xml
@@ -168,13 +168,13 @@
          </ant>
     </target>
     
-    <target name="test-custom-coverage" depends="init" description="run junittest in local build directory with Coberature code coverage for custom code only">
+    <target name="test-custom-coverage" depends="init" description="run junittest in local build directory with Cobertura code coverage for custom code only">
         <ant antfile="${site.dir}/build.xml" target="test-custom-coverage" inheritAll="false" >
             <property name="dist.path" location="${dist.dir}" />
         </ant>
     </target>
     
-    <target name="test-all-coverage" depends="init" description="run junittest in local build directory with Coberature code coverage for custom and core code">
+    <target name="test-all-coverage" depends="init" description="run junittest in local build directory with Cobertura code coverage for custom and core code">
         <ant antfile="${site.dir}/build.xml" target="test-all-coverage" inheritAll="false" >
             <property name="dist.path" location="${dist.dir}" />
         </ant>
