fix for truncated records (too many 999 fields (items) to fit in single bib record ...) -- use combining reader so all the 999s are attached to a single bib record.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3689 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_config.properties
+++ b/examples/stanfordBlacklight/sw_config.properties
@@ -31,6 +31,16 @@ marc.permissive = true
 # - marc.verbose - when set to true, output much more information as each marc 
 #   record is ingested
 marc.verbose = false
+# - marc.combine_records - if a bib record with all of its holdings stuffed into
+#  a bib field is too big to be exported from Sirsi as a single record, the 
+#  Sirsi system writes the record out multiple times with each subsequent record 
+#  containing a subset of the total holdings information.  When this property
+#  is set, the "MarcCombiningReader" class is used to create a single marc
+#  record with all of the occurrences of the given field.  That is, if the
+#  Sirsi export created 3 bib records due to lots of items, and the item info
+#  is in a 999 bib field, then setting marc.combined_records = 999 will
+#  create a single marc record with ALL the 999 fields for importing into Solr.
+marc.combine_records = 999
 
 
 # --- Solr instance properties -------------------------------------------------
