add missing languages (Shelley actually added them)
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3714 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/translation_maps/language_map.properties
+++ b/examples/stanfordBlacklight/translation_maps/language_map.properties
@@ -10,14 +10,17 @@ ady = Adygei
 afa = Afroasiatic (Other)
 afh = Afrihili (Artificial language)
 afr = Afrikaans
+ain = Ainu
 ajm = Aljamia
 aka = Akan
 akk = Akkadian
 alb = Albanian
 ale = Aleut
 alg = Algonquian (Other)
+alt = Altai
 amh = Amharic
 ang = English, Old (ca. 450-1100)
+anp = Angika
 apa = Apache languages
 ara = Arabic
 arc = Aramaic
@@ -65,6 +68,7 @@ bua = Buriat
 bug = Bugis
 bul = Bulgarian
 bur = Burmese
+byn = Bilin
 cad = Caddo
 cai = Central American Indian (Other)
 cam = Khmer
@@ -97,6 +101,7 @@ cpp = Creoles and Pidgins, Portuguese-based (Other)
 cre = Cree
 crh = Crimean Tatar
 crp = Creoles and Pidgins (Other)
+csb = Kashubian
 cus = Cushitic (Other)
 cze = Czech
 dak = Dakota
@@ -110,6 +115,7 @@ din = Dinka
 div = Divehi
 doi = Dogri
 dra = Dravidian (Other)
+dsb = Lower Sorbian
 dua = Duala
 dum = Dutch, Middle (ca. 1050-1350)
 dut = Dutch
@@ -133,6 +139,7 @@ fao = Faroese
 far = Faroese
 fat = Fanti
 fij = Fijian
+fil = Filipino
 fin = Finnish
 fiu = Finno-Ugrian (Other)
 fon = Fon
@@ -140,6 +147,8 @@ fre = French
 fri = Frisian
 frm = French, Middle (ca. 1400-1600)
 fro = French, Old (ca. 842-1400)
+frr = North Frisian
+frs = East Frisian
 fry = Frisian
 ful = Fula
 fur = Friulian
@@ -167,6 +176,7 @@ grb = Grebo
 grc = Greek, Ancient (to 1453)
 gre = Greek, Modern (1453- )
 grn = Guarani
+gsw = Swiss German
 gua = Guarani
 guj = Gujarati
 gwi = Gwich'in
@@ -182,6 +192,8 @@ hin = Hindi
 hit = Hittite
 hmn = Hmong
 hmo = Hiri Motu
+hrv = Croatian
+hsb = Upper Sorbian
 hun = Hungarian
 hup = Hupa
 iba = Iban
@@ -205,6 +217,7 @@ iri = Irish
 iro = Iroquoian (Other)
 ita = Italian
 jav = Javanese
+jbo = Lojban (Artificial language)
 jpn = Japanese
 jpr = Judeo-Persian
 jrb = Judeo-Arabic
@@ -234,6 +247,8 @@ kon = Kongo
 kor = Korean
 kos = Kusaie
 kpe = Kpelle
+krc = Karachay-Balkar
+krl = Karelian
 kro = Kru
 kru = Kurukh
 kua = Kuanyama
@@ -277,6 +292,7 @@ mar = Marathi
 mas = Masai
 max = Manx
 may = Malay
+mdf = Moksha
 mdr = Mandar
 men = Mende
 mga = Irish, Middle (ca. 1100-1550)
@@ -297,8 +313,10 @@ mos = Moore
 #mul = Multiple languages
 mun = Munda (Other)
 mus = Creek
+mwl = Mirandese
 mwr = Marwari
 myn = Mayan languages
+myv = Erzya
 nah = Nahuatl
 nai = North American Indian (Other)
 nap = Neapolitan Italian
@@ -318,8 +336,10 @@ nob = Norwegian (Bokmal)
 nog = Nogai
 non = Old Norse
 nor = Norwegian
+nqo = N'Ko
 nso = Northern Sotho
 nub = Nubian languages
+nwc = Newari, Old
 nya = Nyanja
 nym = Nyamwezi
 nyn = Nyankole
@@ -360,6 +380,7 @@ roh = Raeto-Romance
 rom = Romani
 rum = Romanian
 run = Rundi
+rup = Aromanian
 rus = Russian
 sad = Sandawe
 sag = Sango (Ubangi Creole)
@@ -372,6 +393,7 @@ sao = Samoan
 sas = Sasak
 sat = Santali
 scc = Serbian
+scn = Sicilian Italian
 sco = Scots
 scr = Croatian
 sel = Selkup
@@ -404,6 +426,8 @@ son = Songhai
 sot = Sotho
 spa = Spanish
 srd = Sardinian
+srn = Sranan
+srp = Serbian
 srr = Serer
 ssa = Nilo-Saharan (Other)
 sso = Sotho
@@ -415,7 +439,8 @@ sux = Sumerian
 swa = Swahili
 swe = Swedish
 swz = Swazi
-syr = Syriac
+syc = Syriac
+syr = Syriac, Modern
 tag = Tagalog
 tah = Tahitian
 tai = Tai (Other)
@@ -435,6 +460,7 @@ tig = Tigre
 tir = Tigrinya
 tiv = Tiv
 tkl = Tokelauan
+tlh = Klingon (Artificial language)
 tli = Tlingit
 tmh = Tamashek
 tog = Tonga (Nyasa)
@@ -482,9 +508,11 @@ yid = Yiddish
 yor = Yoruba
 ypk = Yupik languages
 zap = Zapotec
+zbl = Blissymbolics
 zen = Zenaga
 zha = Zhuang
 znd = Zande
 zul = Zulu
 zun = Zuni
 #zxx = null
+zza = Zaza
