include cobertura in lib/test directory.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3717 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/build.properties
+++ b/examples/stanfordBlacklight/build.properties
@@ -33,10 +33,7 @@ test.class = edu.stanford.AllTests
 #test.class = edu.stanford.MiscellaneousFieldTests
 
 # - cobertura.jar.dir - directory containing cobertura jar file(s)
-#  hudson
-cobertura.jar.dir = /home/hudson/tools/cobertura
-#  laptop
-#cobertura.jar.dir = /Applications/cobertura-1.9.3
+cobertura.jar.dir = ../lib/test/cobertura/cobertura-1.9.4.1/
 
 # - cobertura.instr.dir - directory containing classes instrumented for coverage data
 cobertura.instr.dir = instr
