marc21 -> marcxml in solr field;  solr field name changed marc21 -> raw_marc.  Also fixed typo on ItemsSplitTests
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3718 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -1,6 +1,6 @@
 # Stanford mappings of solr field contents from marc bib data
 id = custom, getId
-marc21 = FullRecordAsMarc
+raw_marc = FullRecordAsXML
 all_search = custom, getAllFields
 collection = "sirsi"
 
