item_display is no longer  "delete record if field empty"
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3720 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -144,7 +144,7 @@ barcode_search = 999i
 preferred_barcode = custom, getPreferredItemBarcode
 access_facet = custom, getAccessMethods
 building_facet = custom, getBuildings, library_map.properties
-item_display = customDeleteRecordIfFieldEmpty, getItemDisplay
+item_display = custom, getItemDisplay
 
 pattern_map.issn.pattern_0 = ^(\\d{4}-\\d{3}[X\\d])$=>$1
 
