fix for colons and ampersands in searching (schema.xml change);  do not use marcxml at this time;  advanced search - mm=1 (which i think it used to be)
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3721 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -1,6 +1,6 @@
 # Stanford mappings of solr field contents from marc bib data
 id = custom, getId
-raw_marc = FullRecordAsXML
+marc21 = FullRecordAsMARC
 all_search = custom, getAllFields
 collection = "sirsi"
 
@@ -144,7 +144,7 @@ barcode_search = 999i
 preferred_barcode = custom, getPreferredItemBarcode
 access_facet = custom, getAccessMethods
 building_facet = custom, getBuildings, library_map.properties
-item_display = custom, getItemDisplay
+item_display = customDeleteRecordIfFieldEmpty, getItemDisplay
 
 pattern_map.issn.pattern_0 = ^(\\d{4}-\\d{3}[X\\d])$=>$1
 
