solrmarc vendor drop R1256 2010-09-13: summary holdings code, new marc4j and new constants capability
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3725 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/build.xml
+++ b/build.xml
@@ -191,5 +191,11 @@
              <property name="dist.path" location="${dist.dir}" />
          </ant>
     </target>
+    
+    <target name="maintest" depends="init" description="Run indextest test suite from top-level directory">
+         <ant antfile="${site.dir}/build.xml" target="maintest" inheritAll="false" >
+             <property name="dist.path" location="${dist.dir}" />
+         </ant>
+    </target>
 
 </project>
