add dbAZsubjects_facet containing translated codes from 099a
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3734 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -100,6 +100,7 @@ pub_date_sort = custom, getPubDateSort
 
 language = 008[35-37]:041a:041d, language_map.properties
 format = custom, getFormats
+dbAZsubjects_facet = custom, getDbAZSubjects, db_subjects_map.properties
 physical = 300abcefg
 vern_physical = custom, getLinkedField(300abcefg)
 
