fix when db A-Z subject codes in 099a are assigned two values
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3736 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/translation_maps/db_subjects_map.properties
+++ b/examples/stanfordBlacklight/translation_maps/db_subjects_map.properties
@@ -10,9 +10,9 @@ BH = Art, Architecture and Design
 BL = Religious Studies
 BM = Jewish Studies
 BP = Islam and the Middle East
-BP = Religious Studies
+BP2 = Religious Studies
 BQ = Asian Studies (East, South & Southeast Asia; Middle East)
-BQ = Religious Studies
+BQ2 = Religious Studies
 BR = Religious Studies
 BS = Religious Studies
 BT = Religious Studies
@@ -46,14 +46,13 @@ GB = Earth Sciences
 GC = Aquatic Sciences
 GE = Environmental Studies
 GF = Anthropology and Archaeology
-GF = Environmental Studies
+GF2 = Environmental Studies
 GN = Anthropology and Archaeology
 GR = Anthropology and Archaeology
 GT = Anthropology and Archaeology
 GV = Other
 G = Geography
 
-HA = Statistical and Numeric Data
 HA = Statistical and Numeric Data
 HB = Economics and Business
 HC = Economics and Business
@@ -72,9 +71,9 @@ HX = Sociology
 H = Social Sciences (General)
 
 JK = American History
-JK = Political Science
-JX = Law|Social Sciences
-JX = Political Science
+JK2 = Political Science
+JX = Law
+JX2 = Political Science
 J = Political Science
 
 KB = Religious Studies
@@ -86,17 +85,17 @@ KD = British and Commonwealth History
 KDZ = Law
 KF = American History
 KJV = French and Italian Studies
-KJV = Law
+KJV2 = Law
 KJW = French and Italian Studies
-KJW = Law
+KJW2 = Law
 KK = Germanic Studies
-KK = Laws
+KK2 = Law
 KKA = Germanic Studies
-KKA = Law
+KKA2 = Law
 KKB = Germanic Studies
-KKB = Law
+KKB2 = Law
 KKC = Germanic Studies
-KKC = Law
+KKC2 = Law
 K = Law
 
 L = Education
@@ -106,7 +105,7 @@ M = Music
 N = Art, Architecture and Design
 
 PA = Ancient Greek and Roman Culture
-PA = Medieval Studies
+PA2 = Medieval Studies
 PD = Germanic Studies
 PF = Germanic Studies
 PG = Slavic and Eastern European Studies
@@ -160,6 +159,7 @@ XI = Linguistics
 XJ = Toxicology and Chemical Safety
 XK = East Asia Studies
 XL = Computer Science
+XM = Government Information: United States
 X = General and Reference Works
 
 Z = General and Reference Works
