--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -27,6 +27,7 @@ title_display = custom, removeTrailingPunct(245abdefghijklmnopqrstuvwxyz, [\\\\,
 vern_title_display = custom, vernRemoveTrailingPunc(245abdefghijklmnopqrstuvwxyz, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 title_full_display = custom, getAllAlphaSubfields(245)
 vern_title_full_display = custom, getLinkedField(245[a-z])
+# no longer using title_uniform_display  due to author-title searching needs ? 2010-11
 title_uniform_display = custom, getAllAlphaSubfields(130:240, first)
 vern_title_uniform_display = custom, getVernacular(130abcdefghijklmnopqrstuvwxyz:240abcdefghijklmnopqrstuvwxyz, first)
 # Title Sort Field
@@ -98,7 +99,7 @@ pub_date = custom, getPubDate
 pub_date_group_facet = custom, getPubDateGroups
 pub_date_sort = custom, getPubDateSort
 
-language = 008[35-37]:041a:041d, language_map.properties
+language = custom, getLanguages, language_map.properties
 format = custom, getFormats
 dbAZsubjects_facet = custom, getDbAZSubjects, db_subjects_map.properties
 physical = 300abcefg
