added subject_all_search field so subject links in UI can be for a phrase in ALL subfields.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3741 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -27,7 +27,7 @@ title_display = custom, removeTrailingPunct(245abdefghijklmnopqrstuvwxyz, [\\\\,
 vern_title_display = custom, vernRemoveTrailingPunc(245abdefghijklmnopqrstuvwxyz, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 title_full_display = custom, getAllAlphaSubfields(245)
 vern_title_full_display = custom, getLinkedField(245[a-z])
-# no longer using title_uniform_display  due to author-title searching needs ? 2010-11
+# ? no longer will use title_uniform_display due to author-title searching needs ? 2010-11
 title_uniform_display = custom, getAllAlphaSubfields(130:240, first)
 vern_title_uniform_display = custom, getVernacular(130abcdefghijklmnopqrstuvwxyz:240abcdefghijklmnopqrstuvwxyz, first)
 # Title Sort Field
@@ -72,6 +72,8 @@ subject_other_search = custom, getTopicAllAlphaExcept(600vxyz:610vxyz:611vxyz:63
 vern_subject_other_search = custom, getVernAllAlphaExcept(600vxyz:610vxyz:611vxyz:630vxyz:655vxyz:656vxyz:657vxyz:658vxyz:696vxyz:697vxyz:698vxyz:699vxyz) 
 subject_other_subvy_search = 600vy:610vy:611vy:630vy:650vy:651vy:654vy:655vy:656vy:657vy:690vy:691vy:696vy:697vy:698vy:699vy
 vern_subject_other_subvy_search = custom, getLinkedField(600vy:610vy:611vy:630vy:650vy:651vy:654vy:655vy:656vy:657vy:690vy:691vy:696vy:697vy:698vy:699vy)
+subject_all_search = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:652:653:654:655:656:657:658:662:690:691:696:697:698:699)
+vern_subject_all_search = custom, getLinkedField(600[a-z]:610[a-z]:611[a-z]:630[a-z]:648[a-z]:650[a-z]:651[a-z]:652[a-z]:653[a-z]:654[a-z]:655[a-z]:656[a-z]:657[a-z]:658[a-z]:662[a-z]:690[a-z]:691[a-z]:696[a-z]:697[a-z]:698[a-z]:699[a-z])
 # Subject Facet Fields
 topic_facet = custom, getTopicWithoutTrailingPunct(600abcdq:600t:610ab:610t:630a:630t:650a:655a, [\\\\,;:], ([A-Za-z0-9]{4}|\\)) )
 geographic_facet = custom, removeTrailingPunct(651a, [\\\\,;], ([A-Za-z0-9]{2}|\\)) )
