author title field exists - mapping tests only
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3754 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -33,6 +33,9 @@ vern_title_uniform_display = custom, getVernacular(130abcdefghijklmnopqrstuvwxyz
 # Title Sort Field
 title_sort = custom, getSortTitle
 
+# Author Title Search Fields
+author_title_search = custom, getAuthorTitleSearch
+
 # Author Search Fields
 # IFF relevancy of author search needs improvement, unstemmed flavors for author search
 #   (keep using stemmed version for everything search to match stemmed query)
