move MISS-INPROC  from missing/lost location map to  skipped location map.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3765 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/translation_maps/locations_skipped_list.properties
+++ b/examples/stanfordBlacklight/translation_maps/locations_skipped_list.properties
@@ -15,6 +15,7 @@ LOCKSS      # Locks shadowed copy
 LOST        # LOST shadowed
 MAPCASES-S  # Shadowed location for loading Marcive SLS records
 MAPFILE-S   # Shadowed location for loading Marcive SLS records
+MISS-INPRO  # IN Process missing - treat as shadowed
 MEDIA-MTXO  # Media Microtext (Obsolete Loc Code) 
 NEG-PURCH   # Negative Purchase Decision 
 SEL-NOTIFY  
