rename field to db_az_subject and make it stored as well as indexed.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3776 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -106,7 +106,7 @@ pub_date_sort = custom, getPubDateSort
 
 language = custom, getLanguages, language_map.properties
 format = custom, getFormats
-dbAZsubjects_facet = custom, getDbAZSubjects, db_subjects_map.properties
+db_az_subject = custom, getDbAZSubjects, db_subjects_map.properties
 physical = 300abcefg
 vern_physical = custom, getLinkedField(300abcefg)
 
