add db_az_subject to returned fields (fl) for Solr request handlers;  strip out unnec series fields (losing 13 fields in the index!)
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3779 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -15,9 +15,6 @@ title_variant_search = 210ab:222ab:242abnp:243adfgklmnoprs:246abfgnp:247abfgnp
 vern_title_variant_search = custom, getLinkedField(210ab:222ab:242abnp:243adfgklmnoprs:246abfgnp:247abfgnp)
 title_related_search = 505t:700fgklmnoprst:710dfgklmnoprst:711fgklnpst:730adfgklmnoprst:740anp:760st:762st:765st:767st:770st:772st:773st:774st:775st:776st:777st:780st:785st:786st:787st:796fgklmnoprst:797dfgklmnoprst:798fgklnpst:799adfgklmnoprst
 vern_title_related_search = custom, getLinkedField(505t:700fgklmnoprst:710dfgklmnoprst:711fgklnpst:730adfgklmnoprst:740anp:760st:762st:765st:767st:770st:772st:773st:774st:775st:776st:777st:780st:785st:786st:787st:796fgklmnoprst:797dfgklmnoprst:798fgklnpst:799adfgklmnoprst)
-# title_series fields no longer used as of 2011-03-09
-#title_series_search = 440anpv:490av:800fgklmnoprstv:810dfgklmnoprstv:811fgklnpstv:830adfgklmnoprstv:840av
-#vern_title_series_search = custom, getLinkedField(440anpv:490av:800fgklmnoprstv:810dfgklmnoprstv:811fgklnpstv:830adfgklmnoprstv:840av)
 # Title Display Fields
 title_245a_display = custom, removeTrailingPunct(245a, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
 vern_title_245a_display = custom, vernRemoveTrailingPunc(245a, [\\\\,/;:], ([A-Za-z]{4}|[0-9]{3}|\\)|\\,))
@@ -33,6 +30,10 @@ title_uniform_display = custom, getAllAlphaSubfields(130:240, first)
 vern_title_uniform_display = custom, getVernacular(130abcdefghijklmnopqrstuvwxyz:240abcdefghijklmnopqrstuvwxyz, first)
 # Title Sort Field
 title_sort = custom, getSortTitle
+
+# Series Search Fields
+series_search = 440anpv:490av:800[a-x]:810[a-x]:811[a-x]:830[a-x]
+vern_series_search = custom, getLinkedField(440anpv:490av:800[a-x]:810[a-x]:811[a-x]:830[a-x])
 
 # Author Title Search Fields
 author_title_search = custom, getAuthorTitleSearch
@@ -82,22 +83,6 @@ vern_subject_all_search = custom, getLinkedField(600[a-z]:610[a-z]:611[a-z]:630[
 topic_facet = custom, getTopicWithoutTrailingPunct(600abcdq:600t:610ab:610t:630a:630t:650a:655a, [\\\\,;:], ([A-Za-z0-9]{4}|\\)) )
 geographic_facet = custom, removeTrailingPunct(651a, [\\\\,;], ([A-Za-z0-9]{2}|\\)) )
 era_facet = custom, removeTrailingPunct(650y:651y, [\\\\,;], ([A-Za-z0-9]{2}) )
-
-# Series Search Fields
-#series_title_search = 440anpv:830[a-x]
-#vern_series_title_search = custom, getLinkedField(440anpv:830[a-x])
-#series_person_search = 440anpv:800[a-x]
-#vern_series_person_search = custom, getLinkedField(440anpv:800[a-x])
-#series_org_search = 440anpv:810[a-x]
-#vern_series_org_search = custom, getLinkedField(440anpv:810[a-x])
-#series_proc_search = 440anpv:811[a-x]
-#vern_series_proc_search = custom, getLinkedField(440anpv:811[a-x])
-#series_anything_search = 440anpv:800[a-x]:810[a-x]:811[a-x]:830[a-x]
-#vern_series_anything_search = custom, getLinkedField(440anpv:800[a-x]:810[a-x]:811[a-x]:830[a-x])
-#series_anything490_search = 440anpv:490a:800[a-x]:810[a-x]:811[a-x]:830[a-x]
-#vern_series_anything490_search = custom, getLinkedField(440anpv:490a:800[a-x]:810[a-x]:811[a-x]:830[a-x])
-series_search = 440anpv:490a:800[a-x]:810[a-x]:811[a-x]:830[a-x]
-vern_series_search = custom, getLinkedField(440anpv:490a:800[a-x]:810[a-x]:811[a-x]:830[a-x])
 
 # Publication Fields
 pub_search = custom, getPublication 
