change biz library name from Jackson to Business
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3782 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/translation_maps/library_map.properties
+++ b/examples/stanfordBlacklight/translation_maps/library_map.properties
@@ -20,7 +20,7 @@ HV-ARCHIVE = Hoover Archives
 #ILB = Ignore
 LANE-MED = Lane (Medical)
 LAW = Crown (Law)
-JACKSON = Jackson (Business)
+JACKSON = Business
 MATH-CS = Mathematics & Statistics
 MEYER = Meyer
 MUSIC = Music
