--- a/examples/stanfordBlacklight/translation_maps/location_map.properties
+++ b/examples/stanfordBlacklight/translation_maps/location_map.properties
@@ -1,4 +1,4 @@
-#Location Translations for the UI
+#Location Translations -- used to group locations for call number lopping
 
 displayRawIfMissing = true
 
@@ -20,9 +20,10 @@ ARTLCKS = Locked Stacks, Small
 ARTLCKS-R = Locked Stacks, Small (Restricted access)
 ART-LOAN = Art Library Loan Desk
 ART-RESV = On Reserve at ART Library
+ART-AT-ENG = Currently available at Engineering Library
 ARTVAULT = Art Vault
 ASK@EASIA = Check East Asia Library for holdings
-ASK@GSB =  Check Jackson catalog for status
+ASK@GSB =  Check Business Library catalog for status
 ASK@LANE =  Check Lane catalog for status
 ASSMD-LOST = Assumed lost
 ATLASES = Atlas Section
@@ -76,9 +77,9 @@ CURRSTOR = Ask at loan desk
 #DISCARD = Discard (!skip 999)
 #DISCARD-NS = Discarded - shadow (!skip 999) 
 DOMESTIC = Domestic
-EALSAL-CHN = Chinese materials in SAL
-EALSAL-JPN = Japanese materials in SAL
-EALSAL-KOR = Korean materials in SAL
+EALSAL-CHN = Chinese materials in SAL 1&2
+EALSAL-JPN = Japanese materials in SAL 1&2
+EALSAL-KOR = Korean materials in SAL 1&2
 #EAL-TEMP-S = East Asia Library shadow (!skip 999)
 EAR-LOAN = Earth Sciences (Branner) Loan Desk
 EARTH-RESV = On Reserve at BRANNER Library
@@ -86,7 +87,7 @@ EAS-LOAN = East Asia Loan Desk
 EAS-RESV = East Asia Reserves
 EDI = In process
 EDU-LOAN = Education Loan Desk
-EDU-RESV = Education Loan Desk
+EDU-RESV => On Reserve at EDUCATION Library
 #E-INPROC-S = In Process - shadow (!skip 999)
 #ELECTR-LOC = Electronic  (!show link only)
 ENDPROCESS = Not available right now
@@ -115,6 +116,7 @@ FOLIO-KOR = Korean Folios
 FOREIGN = Foreign
 FORN-DOCS = Foreign Government Documents
 FRECOT = Frecot Collection (Non-circulating)
+GADGETBAR = Gadget Bar
 GOLDSTAR = Ask at loan desk
 GREEN-RESV = Green Reserves
 GRE-LOAN = Green Loan Desk
@@ -165,6 +167,7 @@ INTRANSIT = In transit
 JAPANESE = Japanese Collection
 #KIOSK = Access at any Kiosk Workstation
 KOREAN = Korean Collection
+LAC = Out for vendor cataloging
 LANE-RESV = On Reserve at LANE MEDICAL Library
 LANG-LAB = Language Lab
 LANG-RESV = Language Lab Reserves
@@ -211,6 +214,7 @@ MEDIAX-30 = Media Collection
 MEDIEVALRM = Medieval Studies Room (Non-ciculating)
 MEMLIBMUS = Memorial Library of Music (Non-ciculating)
 MEYER-RESV = Reserves
+MEY-LOAN = Meyer Tech Desk
 MEYER-LOAN = Meyer Tech Desk
 MEZZANINE = Mezzanine Shelving Area
 MICROFICHE = Microfiche
@@ -251,10 +255,10 @@ PAGE-HA = Use restricted to Hoover Archives
 PAGE-HP = Use restricted to Hopkins (Marine Biology)
 PAGE-HV = Use restricted to Hoover Library
 PAGE-ILL = Paged to Interlibrary Loan Department
-PAGE-JA = Paging to Jackson (GSB)
+PAGE-JA = Use restricted to Business Library
 PAGE-LN = Paged to Lane (Medical)
 PAGE-LP = Paging restricted to Music or Green Media-Microtext
-PAGE-LW = Use restricted to Jackson (Law)
+PAGE-LW = Use restricted to Crown (Law)
 PAGE-MA = Use restricted to Math/CS
 PAGE-MD = Use restricted to Green Media-Microtext
 PAGE-MP = Paging restricted to Branner (Earth Sciences)
@@ -270,6 +274,7 @@ PGDFROMSAL = Paged from SAL to campus library
 PHOTO-PERM = Ask at loan desk
 PHY-LOAN = Physics Loan Desk
 PHYS-RESV = On Reserve at PHYSICS Library
+PHYSTEMP = Currently online only
 PUB-TECH = Not available right now
 RARE-BOOKS = Rare Books Collection (Non-ciculating)
 RARE-STOR = Rare Books Storage (Non-ciculating)
@@ -346,6 +351,7 @@ SSRC-DATA = Social Sciences Data Service Virtual Data Coll. (Non-circulating)
 SSRC-DESK = Social Sciences Resource Center: Desk (Non-circulating)
 SSRC-DOCS = SSRC: Government Documents (Non-circulating)
 SSRC-FICHE = SSRC: Microfiche (Non-circulating)
+SSRC-FILM = SSRC: Microfilm (Non-circulating)
 #SSRC-FIC-S = SHADOWED (!skip 999)
 SSRC-NEWBK = Social Sciences Resource Center: New Books Shelf
 SSRC-NWDOC = Social Sciences Resource Center: New Documents Shelf
