user searchable isbn and issn values expanded per SW-522
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3784 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -112,7 +112,7 @@ url_sfx = 956u, (pattern_map.sfx)
 
 # Standard Number Fields
 isbn_search = custom, getUserISBNs
-issn_search = 022a:022l:022m:022y:022z, (pattern_map.issn)
+issn_search = 022a:022l:022m:022y:022z:770x:771x:772x:773x:774x:775x:776x:777x:778x:779x:780x:781x:782x:783x:784x:785x:786x:787x:788x:789x:490x:800x:810x:811x:830x, (pattern_map.issn)
 isbn_display = custom, getISBNs
 issn_display = custom, getISSNs   
 lccn = 010a:010z, (pattern_map.lccn), first
