add restricted URL field to allow SearchWorks UI to indicate restricted URLs in the search results.
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3788 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -109,6 +109,7 @@ vern_summary_search = custom, getLinkedField(520ab)
 url_fulltext = custom, getFullTextUrls
 url_suppl = custom, getSupplUrls
 url_sfx = 956u, (pattern_map.sfx)
+url_restricted = custom, getRestrictedUrls
 
 # Standard Number Fields
 isbn_search = custom, getUserISBNs
