--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -82,6 +82,7 @@ vern_subject_all_search = custom, getLinkedField(600[a-z]:610[a-z]:611[a-z]:630[
 # Subject Facet Fields
 topic_facet = custom, getTopicWithoutTrailingPunct(600abcdq:600t:610ab:610t:630a:630t:650a:655a, [\\\\,;:], ([A-Za-z0-9]{4}|\\)) )
 geographic_facet = custom, removeTrailingPunct(651a, [\\\\,;], ([A-Za-z0-9]{2}|\\)) )
+geographic_facet = custom, getGeographicFacet([\\\\,;], ([A-Za-z0-9]{2}|\\)) )
 era_facet = custom, removeTrailingPunct(650y:651y, [\\\\,;], ([A-Za-z0-9]{2}) )
 
 # Publication Fields
