improve author phrase search - RDA related - don't include sub e for 100, 110 and don't include sub i for 111 (but yes, include sub e for 111) for author and author-title search fields. (SW-588)
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3794 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -41,8 +41,8 @@ author_title_search = custom, getAuthorTitleSearch
 # Author Search Fields
 # IFF relevancy of author search needs improvement, unstemmed flavors for author search
 #   (keep using stemmed version for everything search to match stemmed query)
-author_1xx_search = 100abcdegjqu:110abcdegnu:111acdegjnqu
-vern_author_1xx_search = custom, getLinkedField(100abcdegjqu:110abcdegnu:111acdegjnqu)
+author_1xx_search = 100abcdgjqu:110abcdgnu:111acdegjnqu
+vern_author_1xx_search = custom, getLinkedField(100abcdgjqu:110abcdgnu:111acdegjnqu)
 author_7xx_search = 700abcdegjqu:720ae:796abcdegjqu:710abcdegnu:797abcdegnu:711acdejngqu:798acdegjnqu
 vern_author_7xx_search = custom, getLinkedField(700abcdegjqu:720ae:796abcdegjqu:710abcdegnu:797abcdegnu:711acdegjnqu:798acdegjnqu)
 author_8xx_search = 800abcdegjqu:810abcdegnu:811acdegjnqu
