improve author phrase search - RDA related - don't include sub e for 700, 796, 710, 797 and don't include sub i for 711, 798 (but yes, include sub e) for author and author-title search fields. (SW-589)
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3795 e0eb17dc-060e-4555-9e78-273a5d168c06

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -43,8 +43,8 @@ author_title_search = custom, getAuthorTitleSearch
 #   (keep using stemmed version for everything search to match stemmed query)
 author_1xx_search = 100abcdgjqu:110abcdgnu:111acdegjnqu
 vern_author_1xx_search = custom, getLinkedField(100abcdgjqu:110abcdgnu:111acdegjnqu)
-author_7xx_search = 700abcdegjqu:720ae:796abcdegjqu:710abcdegnu:797abcdegnu:711acdejngqu:798acdegjnqu
-vern_author_7xx_search = custom, getLinkedField(700abcdegjqu:720ae:796abcdegjqu:710abcdegnu:797abcdegnu:711acdegjnqu:798acdegjnqu)
+author_7xx_search = 700abcdgjqu:720ae:796abcdgjqu:710abcdgnu:797abcdgnu:711acdejngqu:798acdegjnqu
+vern_author_7xx_search = custom, getLinkedField(700abcdgjqu:720ae:796abcdgjqu:710abcdgnu:797abcdgnu:711acdegjnqu:798acdegjnqu)
 author_8xx_search = 800abcdegjqu:810abcdegnu:811acdegjnqu
 vern_author_8xx_search = custom, getLinkedField(800abcdegjqu:810abcdegnu:811acdegjnqu)
 # Author Facet Fields
