--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 bin/*
 .project
 .classpath
+dist/*
+local_build/*
+*.log*
+test/build/*
+lib/solrmarc/build/*
+lib/solrmarc/dist/*
+
+.DS_Store
+nohup.out
