display_type is a hidden facet for "views" e.g. Images, Maps  SW-605

--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -3,6 +3,7 @@ id = custom, getId
 marc21 = FullRecordAsMARC
 all_search = custom, getAllFields
 collection = "sirsi"
+display_type = "sirsi"
 
 # Title Search Fields
 title_245a_search = 245a
