--- a/examples/stanfordBlacklight/sw_index.properties
+++ b/examples/stanfordBlacklight/sw_index.properties
@@ -100,12 +100,13 @@ db_az_subject = custom, getDbAZSubjects, db_subjects_map.properties
 physical = 300abcefg
 vern_physical = custom, getLinkedField(300abcefg)
 
-toc_search = 505art
+toc_search = 905art:505art, first
 vern_toc_search = custom, getLinkedField(505art)
 context_search = 518a
 vern_context_search = custom, getLinkedField(518a)
-summary_search = 520ab
+summary_search = 920ab:520ab, first
 vern_summary_search = custom, getLinkedField(520ab)
+award_search = 986a:586a, first
 
 # URL Fields
 url_fulltext = custom, getFullTextUrls
