--- a/examples/stanford/sw_config.properties
+++ b/examples/stanford/sw_config.properties
@@ -41,7 +41,7 @@ marc.verbose = false
 #  is in a 999 bib field, then setting marc.combined_records = 999 will
 #  create a single marc record with ALL the 999 fields for importing into Solr.
 marc.combine_records = 999
-# - use edu.stanford.marcUtils.CombineMultBibsMhldsReader as the combining 
+# - use org.solrmarc.marc.CombineMultBibsMhldsReader as the combining 
 #  reader wrapper for split marc records followed by mhld records
 #  e.g. :    bib1 bib2 mhld2 mhld2 bib3 bib4 bib4 mhld4 mhld4 bib5 ...
 # NOTE:  setting this to true causes a huge number of tests to fail as the
