beginning of mhld_display implementation

--- a/examples/stanford/sw_index.properties
+++ b/examples/stanford/sw_index.properties
@@ -145,6 +145,8 @@ access_facet = custom, getAccessMethods
 building_facet = custom, getBuildings, library_map.properties
 item_display = customDeleteRecordIfFieldEmpty, getItemDisplay
 
+mhld_display = custom, getMhldDisplay
+
 pattern_map.issn.pattern_0 = ^(\\d{4}-\\d{3}[X\\d])$=>$1
 
 pattern_map.lccn.pattern_0 = ^(([ a-z]{3}\\d{8})|([ a-z]{2}\\d{10})) ?|( /.*)?$=>$1
