index multiple award statements from 986, or if no 986, from 586

--- a/examples/stanford/sw_index.properties
+++ b/examples/stanford/sw_index.properties
@@ -106,7 +106,7 @@ context_search = 518a
 vern_context_search = custom, getLinkedField(518a)
 summary_search = 920ab:520ab, first
 vern_summary_search = custom, getLinkedField(520ab)
-award_search = 986a:586a, first
+award_search = custom, getAwardSearch
 
 # URL Fields
 url_fulltext = custom, getFullTextUrls
