both 5xx and 9xx now indexed for Nielsen (SW-646)

--- a/examples/stanford/sw_index.properties
+++ b/examples/stanford/sw_index.properties
@@ -100,13 +100,13 @@ db_az_subject = custom, getDbAZSubjects, db_subjects_map.properties
 physical = 300abcefg
 vern_physical = custom, getLinkedField(300abcefg)
 
-toc_search = 905art:505art, first
+toc_search = 905art:505art
 vern_toc_search = custom, getLinkedField(505art)
 context_search = 518a
 vern_context_search = custom, getLinkedField(518a)
-summary_search = 920ab:520ab, first
+summary_search = 920ab:520ab
 vern_summary_search = custom, getLinkedField(520ab)
-award_search = custom, getAwardSearch
+award_search = 986a:586a
 
 # URL Fields
 url_fulltext = custom, getFullTextUrls
