turn on stanford.combining.reader by default

--- a/examples/stanford/sw_config.properties
+++ b/examples/stanford/sw_config.properties
@@ -46,7 +46,7 @@ marc.combine_records = 999
 #  e.g. :    bib1 bib2 mhld2 mhld2 bib3 bib4 bib4 mhld4 mhld4 bib5 ...
 # NOTE:  setting this to true causes a huge number of tests to fail as the
 #  test record files are not sorted in id order 
-#stanford.combining.reader = true
+stanford.combining.reader = true
 
 
 # --- Solr instance properties -------------------------------------------------
