more directory structure tweaking, and still all core ant targets run from setup/build_core.xml except runCoreTestsWithCoverage

--- a/setup/build_core.properties
+++ b/setup/build_core.properties
@@ -4,7 +4,6 @@ name = solrmarc
 
 src.dir = ../src/core
 lib.dir = ../lib
-test.dir = ../test
 solrmarc.dist.dir = ../dist
 solrmarc.build.dir = ../build
 buildtools.path = buildtools
@@ -17,6 +16,8 @@ junit.test.jar.name = SolrMarcJunit.jar
 trans.map.path = translation_maps
 
 # TEST properties
+test.dir = ../test
+core.test.src.dir = ${test.dir}/core
 core.test.build.dir = ${solrmarc.build.dir}/test
 
 cobertura.jar.dir = ${test.dir}/lib/cobertura-1.9.4.1/
