have 5 failing core tests to debug

--- a/setup/build_core.properties
+++ b/setup/build_core.properties
@@ -10,15 +10,23 @@ buildtools.path = buildtools
 
 jar.name = MarcImporter.jar
 one-jar.name = SolrMarc.jar
+log4j.props = ../conf/log4j.properties
+
+trans.map.path = core/translation_maps
+
+# TEST properties
+
 #  the core test jar is used by site specific tests
 junit.test.jar.name = SolrMarcJunit.jar
 
-trans.map.path = translation_maps
-
-# TEST properties
 test.dir = ../test
 core.test.src.dir = ${test.dir}/core
 core.test.build.dir = ${solrmarc.build.dir}/test
+
+#test.data.path = ${test.dir}/core/data
+test.data.path = ../test/core/data
+test.config.file = ${test.data.path}/smoketest/test_config.properties
+solr.path = ${test.data.path}/solr
 
 cobertura.jar.dir = ${test.dir}/lib/cobertura-1.9.4.1/
 # - core.instr.dir - directory containing classes instrumented for coverage data
